--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "body-parser": "^1.14.0",
     "express": "^4.13.3",
+    "jwt-simple": "^0.3.1",
     "mongoose": "^4.1.8",
     "passport": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0"
   }
