--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-simple": "^0.3.1",
     "mongoose": "^4.1.8",
     "passport": "^0.3.0",
+    "passport-anonymous": "^1.0.1",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0"
