--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "dependencies": {
     "body-parser": "^1.14.0",
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "jwt-simple": "^0.3.1",
     "mongoose": "^4.1.8",
+    "node-sass": "^3.3.3",
+    "node-sass-middleware": "^0.9.6",
     "passport": "^0.3.0",
     "passport-anonymous": "^1.0.1",
     "passport-http-bearer": "^1.0.1",
